src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__season_details_ui__season_details_ui_tests__tests__snapshot_tests__season_details_renders_ManualSeasonSearchSortPrompt_2.snap
---
source: src/ui/sonarr_ui/library/season_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Season 1 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Episodes │ History │ Manual Search                                                                                                    │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   Source    Age        ⛔     Title                          Indexer                  Size         Peers        Language  Quality      │               
             │=> torrent   1 days     ⛔     Test Release                   kickass torrents         0.0 MB       2 / 1        English   Bluray-1080p │               
             │   usenet    1 days     ⛔     Test Release                   DrunkenSlug              0.0 MB                    English   Bluray-1080p │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                      ╭─────────────────────────╮                                                      │               
             │                                                      │Something                │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      ╰─────────────────────────╯                                                      │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
